chore(fileAction): Locale method update from deprecated constuctor