@@ -874,7 +874,8 @@ public class FileActions {
                 public void actionPerformed(ActionEvent e) {
                     Andie.exitFullScreen();
                     Preferences p = Preferences.userNodeForPackage(Andie.class);
-                    Locale.setDefault(new Locale("en", "NZ"));
+
+                    Locale.setDefault(Locale.of("en", "NZ"));
                     p.put("language", "en");
                     p.put("country", "NZ");
                     Andie.bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
@@ -890,7 +891,7 @@ public class FileActions {
                 public void actionPerformed(ActionEvent e) {
                     Andie.exitFullScreen();
                     Preferences p = Preferences.userNodeForPackage(Andie.class);
-                    Locale.setDefault(new Locale("id", "ID"));
+                    Locale.setDefault(Locale.of("id", "ID"));
                     p.put("language", "id");
                     p.put("country", "ID");
                     Andie.bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
@@ -907,7 +908,8 @@ public class FileActions {
                 public void actionPerformed(ActionEvent e) {
                     Andie.exitFullScreen();
                     Preferences p = Preferences.userNodeForPackage(Andie.class);
-                    Locale.setDefault(new Locale("zh", "TW"));
+
+                    Locale.setDefault(Locale.of("zh", "TW"));
                     p.put("language", "zh");
                     p.put("country", "TW");
                     Andie.bundle = ResourceBundle.getBundle("cosc202/andie/MessageBundle");
